revert and reformat