@@ -6,9 +6,7 @@
  */
 package com.farao_community.farao.data.crac_creation.creator.fb_constraint.crac_creator;
 
-import com.farao_community.farao.data.crac_api.Crac;
-import com.farao_community.farao.data.crac_api.InstantKind;
-import com.farao_community.farao.data.crac_api.RemedialActionAdder;
+import com.farao_community.farao.data.crac_api.*;
 import com.farao_community.farao.data.crac_api.network_action.NetworkActionAdder;
 import com.farao_community.farao.data.crac_api.range_action.PstRangeActionAdder;
 import com.farao_community.farao.data.crac_creation.creator.api.ImportStatus;
@@ -16,10 +14,8 @@ import com.farao_community.farao.data.crac_creation.creator.fb_constraint.xsd.Ac
 import com.farao_community.farao.data.crac_creation.creator.fb_constraint.xsd.IndependantComplexVariant;
 import com.farao_community.farao.data.crac_creation.util.ucte.UcteNetworkAnalyzer;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static com.farao_community.farao.data.crac_api.usage_rule.UsageMethod.AVAILABLE;
 
@@ -114,7 +110,7 @@ class ComplexVariantReader {
         // interpret actions
         actionReaders = complexVariant.getActionsSet().get(0).getAction().stream()
                 .map(actionType -> new ActionReader(actionType, ucteNetworkAnalyzer))
-                .toList();
+                .collect(Collectors.toList());
 
         Optional<ActionReader> invalidAction = actionReaders.stream().filter(actionReader -> !actionReader.isActionValid()).findAny();
 
@@ -159,7 +155,7 @@ class ComplexVariantReader {
                 return;
             }
 
-            afterCoList = actionsSet.getAfterCOList().getAfterCOId().stream().filter(validCoIds::contains).toList();
+            afterCoList = actionsSet.getAfterCOList().getAfterCOId().stream().filter(validCoIds::contains).collect(Collectors.toList());
             if (afterCoList.isEmpty()) {
                 this.importStatus = ImportStatus.INCONSISTENCY_IN_DATA;
                 this.importStatusDetail = String.format("complex variant %s was removed as all its 'afterCO' are invalid", complexVariant.getId());
